--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Menstrual Cycle Tracker</title>
     <link rel="stylesheet" href="styles.css">
+    <style>
+        body {
+            background: url('bg.jpg') no-repeat center center fixed;
+            background-size: cover;
+            font-family: Arial, sans-serif;
+        }
+    </style>
 </head>
 <body>
     <div class="container">
@@ -26,11 +33,64 @@
 
         <div id="output-container" class="output-container">
             <p id="cycle-result"></p>
+            <p id="phase-message"></p>
         </div>
 
         <p class="footer">Made with ❤️ for someone special</p>
     </div>
 
-    <script src="script.js"></script>
+    <script>
+        function calculateCycle() {
+            const cycleLength = parseInt(document.getElementById("cycle-length").value);
+            const periodLength = parseInt(document.getElementById("period-length").value);
+            const lastPeriodDate = new Date(document.getElementById("last-period-date").value);
+
+            if (isNaN(cycleLength) || isNaN(periodLength) || !lastPeriodDate.getTime()) {
+                alert("Please fill in all fields.");
+                return;
+            }
+
+            const today = new Date();
+
+            // Calculate next period
+            let nextPeriod = new Date(lastPeriodDate);
+            while (nextPeriod <= today) {
+                nextPeriod.setDate(nextPeriod.getDate() + cycleLength);
+            }
+
+            // Calculate ovulation (approx. 14 days before next period)
+            const ovulationDate = new Date(nextPeriod);
+            ovulationDate.setDate(nextPeriod.getDate() - 14);
+
+            // Determine current phase
+            const daysSinceLastPeriod = Math.floor((today - lastPeriodDate) / (1000 * 60 * 60 * 24));
+            let phase = "";
+            let message = "";
+
+            if (daysSinceLastPeriod < periodLength) {
+                phase = "Menstrual";
+                message = "🌙 It's your recharge time. Be kind to yourself and take it slow.";
+            } else if (daysSinceLastPeriod < (cycleLength - 14)) {
+                phase = "Follicular";
+                message = "☀️ Your energy is rising. Great time to plan, dream, and do!";
+            } else if (daysSinceLastPeriod >= (cycleLength - 15) && daysSinceLastPeriod <= (cycleLength - 13)) {
+                phase = "Ovulation";
+                message = "🌼 You’re glowing! Fertility is at its peak. Feel confident and radiant!";
+            } else {
+                phase = "Luteal";
+                message = "🌘 It's time to reflect and nurture yourself. Self-care is your superpower.";
+            }
+
+            const cycleResult = `
+                Your next period will start on: <strong>${nextPeriod.toDateString()}</strong><br>
+                Your estimated ovulation date is: <strong>${ovulationDate.toDateString()}</strong><br>
+                Remember, this is just an estimate and may vary!
+            `;
+
+            document.getElementById("cycle-result").innerHTML = cycleResult;
+            document.getElementById("phase-message").innerHTML = `Current Phase: <strong>${phase}</strong><br>${message}`;
+            document.getElementById("output-container").style.display = 'block';
+        }
+    </script>
 </body>
 </html>
