--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
             "Your cycle secrets are being revealed...",
             "Patience is a virtue, thanks for yours...",
             "Calculating your special moments...",
-            "Hey Girl you aare brave",
+            "Hey Girl you are brave",
             "Your health journey is important...",
             "Menstruation is normal! No shame should be there in socitey..."
         ];
