--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Menstrual Cycle Tracker</title>
+    <meta name="theme-color" content="#FFC0CB">
     <link rel="stylesheet" href="styles.css">
     <style>
         body {
